# AutoTrainV3

./: .batch_cache.json  .batch_state.json  .cursorignore  .pre-commit-config.yaml  README.md  README_pipeline.md  clean_jobs_database.py  combined_script.py  fix_sample_prompts.py  gpu_profiles.json  migrate_from_bash.py  pyproject.toml  quick_train_workflow.sh  requirements.txt  setup.sh
.gradio/: dataset_sources.json  integrations.json  jobs.json  jobs_backup_20250705_191055.json  notes.json  runs.json
.gradio/experiments/: 0e46c1d4.json  1df630f5.json  1ef35712.json  28363ec0.json  820e39bd.json  911ae16a.json  cd95a9d4.json  tmp_093a58ca_0.toml  tmp_093a58ca_1.toml  tmp_093a58ca_2.toml  tmp_0c1715e6_0.toml  tmp_0c1715e6_1.toml  tmp_0e3063b5_0.toml  tmp_0e3063b5_1.toml  tmp_0e46c1d4_0.toml  tmp_0e46c1d4_1.toml  tmp_0e46c1d4_2.toml  tmp_0e46c1d4_3.toml  tmp_0e46c1d4_4.toml  tmp_0e46c1d4_5.toml  tmp_16080e03_0.toml  tmp_16080e03_1.toml  tmp_16080e03_2.toml  tmp_16080e03_3.toml  tmp_16080e03_4.toml  tmp_16080e03_5.toml  tmp_1df630f5_0.toml  tmp_1df630f5_1.toml  tmp_1df630f5_2.toml  tmp_1df630f5_3.toml  tmp_1df630f5_4.toml  tmp_1df630f5_5.toml  tmp_1ef35712_0.toml  tmp_1ef35712_1.toml  tmp_24f176a9_0.toml  tmp_24f176a9_1.toml  tmp_24f176a9_2.toml  tmp_24f176a9_3.toml  tmp_28363ec0_0.toml  (+74 more)
autotrain_sdk/: __init__.py  captioner.py  cli.py  config_models.py  configurator.py  dataset.py  dataset_manage.py  dataset_sources.py  experiments.py  gradio_app.py  integrations.py  job_manager.py  menu.py  paths.py  pipeline.py  run_registry.py  sweeps.py  trainer.py
(+6 files in other folders)
