[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrain-v2"
version = "0.1.0"
description = "CLI and SDK for batch training using sd-scripts"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
cli = ["questionary>=2.0", "rich>=13.7"]
gsheets = [
    "gspread>=6.1",
    "google-auth>=2.29",
]

develop = [
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pre-commit>=3.7",
]

[project.scripts]
autotrain = "autotrain_sdk.menu:run"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false 